# cctv-status-monitor

./: README.md  ddl.sql  pyproject.toml
src/: __init__.py
src/cctv_scanner.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/downtime_calc/: downtime_calc.py
src/scanner_modulo/: __init__.py  scan.py
src/sql_manager_modulo/: ORM_manager.py  __init__.py
